--- a/css/about_styles.css
+++ b/css/about_styles.css
@@ -5,28 +5,7 @@
 body {
     background-color: #fffeea;
     color: #34495e;
-}
-
-.nav {
-    background-color: black;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    padding: 20px 10px 20px;
-}
-
-.nav ul {
-    float: right;
-}
-
-.nav ul li {
-    display: inline-block;
-}
-
-.nav ul li a {
-    color: white;
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
+    padding-top: 50px;
 }
 
 .container {
@@ -35,9 +14,9 @@ body {
 }
 
 .header h1 {
-    text-align: center;
     margin-bottom: 50px;
     margin-top: 50px;
+    text-align: center;
 }
 
 .image {
